actix-web-codegen/tests/trybuild/route-malformed-path-fail.stderr
error: Unknown attribute.
 --> $DIR/route-malformed-path-fail.rs:3:17
  |
3 | #[get("/one/{", other)]
  |                 ^^^^^
